# shadownet-conformance

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  self-test.yml
action/: Dockerfile  action.yml
ci/: sca-server.yaml  sns-server.yaml
fixtures/: README.md  seeds.toml
fixtures/_regen/: manifest.toml
fixtures/_regen/go-emit/: go.mod  go.sum  main.go
fixtures/credentials/: acme_o1.jwt  alice_l1.jwt  alice_l2.jwt  bob_l1.jwt  peer_l2.jwt
fixtures/freshness/: alice_l2_fresh.jwt  bob_l1_stale.jwt  peer_l2_fresh.jwt
fixtures/keys/: peer_holder.json  sca_issuer.json  sns_provider.json  subject_acme.json  subject_alice.json  subject_bob.json
fixtures/presentations/: alice_l2_to_peer.jwt  bob_l1_to_peer.jwt
fixtures/sns_records/: alice.jwt
fixtures/status_lists/: 2026-q3.jwt
src/shadownet_conformance/: __init__.py  _markers.py  cli.py  config.py  errors.py  fixtures.py  logging.py
src/shadownet_conformance/_specs/: README.md
src/shadownet_conformance/_specs/credentials/: subject-credential.schema.json
src/shadownet_conformance/_specs/messages/: envelope.schema.json
src/shadownet_conformance/peer/: __init__.py  identity.py  server.py
src/shadownet_conformance/regen/: cli.py  crosscheck.py  manifest.py
src/shadownet_conformance/regen/py_emit/: __main__.py
src/shadownet_conformance/reporters/: gha_summary.py  rfc_json.py
tests/: conftest.py
tests/conformance/: test_envelope_schema.py  test_subject_credential_schema.py
tests/e2e/: conftest.py  test_round_trip_credential.py  test_round_trip_sidecar.py  test_round_trip_sns.py
tests/predicate/: test_0004_predicate.py
tests/sca/: conftest.py  test_0004_did_document.py  test_0004_freshness.py  test_0004_issuance.py  test_0004_policy.py  test_0004_proof_start.py  test_0004_proof_status.py  test_0004_re_issuance.py  test_0004_status_list.py  test_0004_subject_auth.py
tests/sidecar/: conftest.py  test_0006_agent_card.py  test_0006_handshake_inbound.py
tests/sns/: conftest.py  test_0005_caching.py  test_0005_did_document.py  test_0005_resolve.py  test_0005_signing.py
tests/unit/: test_config.py  test_marker_enforcement.py  test_peer.py  test_reporters.py
