[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shadownet-conformance"
description = "Wire-level interop test suite for the Shadownet protocol."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Shadownet contributors" }]
keywords = ["shadownet", "conformance", "did", "vc", "a2a", "mcp", "interop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "jsonschema>=4.23",
    "starlette>=0.40",
    "uvicorn>=0.32",
    "shadownet",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
regen = [
    # Path-dep to shadownet-py is provided via [tool.uv.sources] below; the
    # runtime dep is the same `shadownet` distribution.
]

[project.scripts]
shadownet-conformance = "shadownet_conformance.cli:main"
shadownet-conformance-fixtures = "shadownet_conformance.regen.cli:main"

[project.urls]
Homepage = "https://github.com/shadownet-protocol/shadownet-conformance"
Specifications = "https://github.com/shadownet-protocol/shadownet-specs"
Issues = "https://github.com/shadownet-protocol/shadownet-conformance/issues"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest-cov>=5",
    "respx>=0.21",
    "types-jsonschema>=4.23",
    "tomli-w>=1.0",
]

# uv-only: editable path deps for sibling SDKs.
# Swap to PyPI versions once shadownet-py publishes.
[tool.uv.sources]
shadownet = { path = "../shadownet-py", editable = true }

[tool.hatch.version]
path = "src/shadownet_conformance/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shadownet_conformance"]

[tool.hatch.build.targets.sdist]
include = [
    "src/shadownet_conformance",
    "tests",
    "fixtures",
    "README.md",
    "CHANGELOG.md",
    "CLAUDE.md",
    "LICENSE",
]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "PT",
    "RET",
    "PIE",
    "PERF",
    "RUF",
    "ASYNC",
    "S",
    "N",
    "TCH",
    "TID",
]
ignore = [
    "E501",
    "S101",
    "PT011",
    "N818",
]

[tool.ruff.lint.per-file-ignores]
# Tests: bandit (S), pep8-naming (N), tidy-imports (TID), flake8-type-checking
# (TC002/TC003) all add friction without correctness value in test files.
# PT018 chained-assert is acceptable in negative-path tests.
"tests/**" = ["S", "N", "TID", "TC002", "TC003", "PT018"]

[tool.ruff.lint.isort]
known-first-party = ["shadownet_conformance"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# ---- mypy ----
[tool.mypy]
python_version = "3.12"
files = ["src/shadownet_conformance"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["mcp.*", "shadownet.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
